@@ -10,7 +10,6 @@ plugins {
     alias libs.plugins.android.test apply false
     alias libs.plugins.apollo apply false
     alias libs.plugins.ksp apply false
-    alias libs.plugins.spotless apply false
     alias libs.plugins.protobuf apply false
     alias libs.plugins.hilt apply false
     alias libs.plugins.kotlin.android apply false
@@ -72,13 +71,37 @@ def setupKotlinAndroidPlugin = { Project project ->
     }
 }
 
-def setupSpotlessPlugin = { Project project ->
-    project.spotless {
-        kotlin {
-            target 'src/**/*.kt'
-            targetExclude 'test/**/*.kt', 'androidTest/**/*.kt'
-            ktlint('0.48.2')
+// https://developer.android.com/kotlin/style-guide
+// https://pinterest.github.io/ktlint/install/integrations/#gradle-integration
+configurations {
+    ktlint
+}
+
+dependencies {
+    ktlint('com.pinterest:ktlint:0.49.0') {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
+    }
+}
+
+def setupKtlint = { Project project ->
+    def srcArgs = ['src/**/*.kt', '!**/build/**', '!src/test/**', '!src/androidTest/**']
+    project.tasks.register('ktlintCheck', JavaExec) {
+        group 'verification'
+        description 'Check Kotlin code style.'
+        classpath configurations.ktlint
+        mainClass.set 'com.pinterest.ktlint.Main'
+        args srcArgs
+    }
+
+    project.tasks.register('ktlintFormat', JavaExec) {
+        group 'formatting'
+        description 'Fix Kotlin code style deviations.'
+        classpath configurations.ktlint
+        mainClass.set 'com.pinterest.ktlint.Main'
+        jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+        args(['-F'] + srcArgs)
     }
 }
 
@@ -94,9 +117,7 @@ subprojects {
                 break
             case 'org.jetbrains.kotlin.gradle.plugin.KotlinAndroidPluginWrapper':
                 setupKotlinAndroidPlugin(project)
-                break
-            case 'com.diffplug.gradle.spotless.SpotlessPlugin':
-                setupSpotlessPlugin(project)
+                setupKtlint(project)
                 break
             default:
                 break
